[api++]: added parking module
